# snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: snake.h
src/: main.c  snake.c
